quelea (2015.3) stable; urgency=normal
 
  * IPv6 addresses only show as a last resort
  * Top / Bottom for notices now the correct way around
  * Auto-play now works
  * Add songpro importer

 -- Michael Berry <michael@quelea.org>  Wednesday, 26 April 2015 00:00:00 +0000